feat: enhance mobile responsiveness, agent execution pipeline, and canvas experience
### Summary of Changes

#### 1. Mobile Responsiveness & Viewport Enhancements
- **Landing Page**:
  - Fixed workflow builder flow arrows in `AiBuilderSection.css` to point downwards in vertical mobile stacks.
  - Resolved horizontal viewport blowout on `ApiSection.css` across smaller viewports.
- **Dashboard & Workflows**:
  - Fixed workflow card and connection card overflow in `Workflows.css` and `Connections.css` using `minmax(0, 1fr)` and `min-width: 0` constraints to prevent grid track expansion on mobile.
  - Fixed mobile navigation drawer layout in `DashboardLayout.css` where the user avatar, name, and email address were clipped/overflowing at the bottom.
- **Landscape Orientation Prompt**:
  - Added `RotateLandscapePrompt` component (`RotateLandscapePrompt.jsx` & `.css`) to detect mobile portrait mode on complex canvas surfaces (`WorkflowCanvas` & `TemplateBlockEditor`).
  - Supports 1-tap fullscreen landscape orientation lock with session-level dismiss.

#### 2. Workflow Starter Templates & Step Validation
- **Starter Templates**:
  - Corrected logic/condition steps in `Dashboard.jsx` (e.g. Website Uptime Monitor, AI PR Reviewer, Sentiment Triage) from `CONDITION` to `ACTION` with `appKey: 'logic'` and `actionKey: 'logic:if'`.
  - Updated configuration schema to match nested `conditions` format expected by the logic runner.
- **Backend Step Resilience**:
  - Added `@JsonCreator` to `StepType.java` to automatically normalize incoming `CONDITION`, `BRANCH`, and `LOGIC` values to `StepType.ACTION`, preventing 400 Bad Request deserialization errors.

#### 3. Redis Cache Prefix Management
- **RedisConfig**:
  - Parameterized cache prefix using `@Value("${crescendo.cache.prefix:crescendo:v1:}")` with a clean `crescendo:v1:` default for production deployments.
  - Flushed local development container to clear legacy serialized keys from prior iterations.

#### 4. Agent Execution & T